--- a/src/main/webapp/WEB-INF/views/thymeleaf/viaje.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/viaje.html
@@ -167,8 +167,7 @@
         defer></script>
 <script th:src="@{/js/maps.js}"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.bundle.min.js"></script>
-<script type="text/javascript">
-</script>
+<script type="text/javascript"></script>
 <script th:src="@{/js/modal.js}"></script>
 </body>
 <!--
