--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -240,7 +240,7 @@
                     <ul class="social-media-icons text-center text-lg-right">
                         <li><a class="fa fa-facebook" href="https://www.facebook.com/themefisher"></a></li>
                         <li><a class="fa fa-twitter" href="https://www.twitter.com/themefisher"></a></li>
-                        <li><a class="fa fa-github-alt" href="https://www.github.com/themefisher"></a></li>
+                        <li><a class="fa fa-github-alt" href="https://github.com/IgnacioAgustinCabral/taller-web-1"></a></li>
                     </ul>
                 </div>
             </div>
