--- a/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
@@ -27,49 +27,59 @@
           <div class="form-group col-md-6">
             <label for="nombre">Nombre</label>
             <input type="text" class="form-control" id="nombre" placeholder="Nombre" th:field="*{nombre}">
+            <div class="error-message alert alert-danger" th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"></div>
           </div>
           <div class="form-group col-md-6">
             <label for="apellido">Apellido</label>
             <input type="text" class="form-control" id="apellido" placeholder="Apellido" th:field="*{apellido}">
+            <div class="error-message alert alert-danger" th:if="${#fields.hasErrors('apellido')}" th:errors="*{apellido}"></div>
           </div>
         </div>
         <div class="form-group">
           <label for="email">Email</label>
           <input type="email" class="form-control" id="email" placeholder="Email" th:field="*{email}">
+          <div class="error-message alert alert-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
         </div>
         <div class="form-group">
           <label for="password">Contraseña</label>
           <input type="password" class="form-control" id="password" placeholder="Contraseña" th:field="*{password}">
+          <div class="error-message alert alert-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
         </div>
         <div class="form-row">
           <div class="form-group col-md-6">
             <label for="fechaNacimiento">Fecha de Nacimiento</label>
             <input type="date" class="form-control" id="fechaNacimiento" th:field="*{fecha_nac}">
+            <div class="error-message alert alert-danger" th:if="${#fields.hasErrors('fecha_nac')}" th:errors="*{fecha_nac}"></div>
           </div>
           <div class="form-group col-md-6">
             <label for="dni">DNI</label>
             <input type="text" class="form-control" id="dni" placeholder="Dni" th:field="*{dni}">
+            <div class="error-message alert alert-danger" th:if="${#fields.hasErrors('dni')}" th:errors="*{dni}"></div>
           </div>
         </div>
         <div class="form-group">
           <div class="form-group col-md-6">
             <label for="codigoArea">Código de Área</label>
             <input type="text" class="form-control" id="codigoArea" placeholder="Código de Área" th:field="*{cod_area}">
+            <div class="error-message alert alert-danger" th:if="${#fields.hasErrors('cod_area')}" th:errors="*{cod_area}"></div>
           </div>
           <div class="form-group col-md-6">
             <label for="telefono">Teléfono</label>
             <input type="tel" class="form-control" id="telefono" placeholder="Teléfono" th:field="*{telefono}">
+            <div class="error-message alert alert-danger" th:if="${#fields.hasErrors('telefono')}" th:errors="*{telefono}"></div>
           </div>
         </div>
         <div class="form-group">
           <label for="imagenDePerfil">Imagen de Perfil</label>
           <input type="file" class="form-control" id="imagenDePerfil" name="imagenDePerfil" th:field="*{imagenDePerfil}" />
+          <div class="error-message alert alert-danger" th:if="${#fields.hasErrors('imagenDePerfil')}" th:errors="*{imagenDePerfil}"></div>
         </div>
 
         <button type="submit" class="btn btn-lg btn-primary font-weight-bold mt-3">Registrarse</button><br>
+        <p th:if="${error != null}" class="alert alert-danger" th:text="${error}"></p>
 
         <a class="mt-3 d-inline-block text-primary" href="login">Ya tienes una cuenta? Inicia Sesión</a>
-        <p th:if="${error != null}" class="alert alert-danger" th:text="'Error ' + ${error}">
+
       </form>
     </div>
   </div>
