--- a/src/main/webapp/WEB-INF/views/thymeleaf/formulario-rechazo.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/formulario-rechazo.html
@@ -3,22 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <title>Formulario de rechazo</title>
+    <!-- Use Thymeleaf expressions for CSS URLs -->
+    <link th:href="@{/plugins/nerd-fonts/css/nerd-fonts.css}" rel="stylesheet">
+    <link th:href="@{/plugins/bootstrap/bootstrap.min.css}" rel="stylesheet">
+    <link th:href="@{/plugins/bootstrap/bootstrap-slider.css}" rel="stylesheet">
+    <!--    <link th:href="@{/plugins/font-awesome/css/font-awesome.min.css}" rel="stylesheet">-->
+    <link th:href="@{/plugins/slick/slick.css}" rel="stylesheet">
+    <link th:href="@{/plugins/slick/slick-theme.css}" rel="stylesheet">
+    <link th:href="@{/plugins/jquery-nice-select/css/nice-select.css}" rel="stylesheet">
+
+    <!-- Use Thymeleaf expressions for JavaScript URLs -->
+    <script th:src="@{/plugins/jquery/jquery.min.js}"></script>
+    <script th:src="@{/plugins/bootstrap/popper.min.js}"></script>
+    <script th:src="@{/plugins/bootstrap/bootstrap.min.js}"></script>
+    <script th:src="@{/plugins/bootstrap/bootstrap-slider.js}"></script>
+    <script th:src="@{/plugins/tether/js/tether.min.js}"></script>
+    <script th:src="@{/plugins/raty/jquery.raty-fa.js}"></script>
+    <script th:src="@{/plugins/slick/slick.min.js}"></script>
+    <script th:src="@{/plugins/jquery-nice-select/js/jquery.nice-select.min.js}"></script>
+    <script th:src="@{/plugins/google-map/map.js}" defer></script>
+    <script th:src="@{js/carrousel.js}"></script>
+
+    <!-- Use Thymeleaf expressions for your custom CSS and JavaScript -->
+    <link th:href="@{/css/style.css}" rel="stylesheet">
+    <script th:src="@{/js/script.js}"></script>
 </head>
-<body>
+<body class="body-wrapper">
 
-<div class="container">
-    <form class="form-group" th:action="@{/rechazado}" method="post">
+<div class="container align-items-center text-center p-5 mt-5">
+    <div class="card m-3">
+        <div class="m-3">
+            <div class="m-1 pb-4">
+                <img src="images/logo/logo_TA_web.png" class="img-fluid" alt="Logo de Travelando" width="100" height="100">
+            </div>
+            <form class="form-group" th:action="@{/rechazado}" method="post">
 
-        <input type="hidden" id="destinatario" name="destinatario" th:value="${session.destinatario}">
-        <input type="hidden" id="nombreCreador" name="nombreCreador" th:value="${session.nombreCreador}">
+                <input type="hidden" id="destinatario" name="destinatario" th:value="${session.destinatario}">
+                <input type="hidden" id="nombreCreador" name="nombreCreador" th:value="${session.nombreCreador}">
 
-        <label for="motivo" class="mb-3"><strong>Motivo del rechazo</strong></label>
-        <textarea class="form-control bg-gray mb-3" id="motivo" name="motivo" th:value="${motivo}"></textarea>
+                <h3 class="card-title"><label for="motivo" class="mb-3 card-title"><strong>Motivo del rechazo</strong></label></h3>
+                <textarea class="form-control bg-gray mb-3" id="motivo" name="motivo" th:value="${motivo}"></textarea>
 
-        <button type="submit" class="btn btn-info">Enviar</button>
-
-    </form>
+                <button type="submit" class="btn btn-info btn-block">Enviar</button>
+            </form>
+        </div>
+    </div>
 </div>
+
 
 </body>
 </html>
