--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -204,7 +204,7 @@
 
 
 
-    <section class=" section" style="padding: 0">
+<!--    <section class=" section" style="padding: 0">
         <section class="section" th:if="${session.isLogged}">
             <div class="container">
                 <div class="row">
@@ -219,7 +219,7 @@
                 </div>
             </div>
         </section>
-    </section>
+    </section>-->
 
     <section class="call-to-action overly bg-3 section-sm">
         <div class="container">
