--- a/src/main/webapp/WEB-INF/views/thymeleaf/perfil.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/perfil.html
@@ -79,7 +79,7 @@
                                     </div>
                                     <div class="col-4 border-end border-light">
                                         <h5 class="text-muted mt-1 mb-2 fw-normal">Calificación</h5>
-                                        <h2 class="mb-0 fw-semibold">87</h2>
+                                        <h2 class="mb-0 fw-semibold" th:text="${calificacionPromedio.intValue()}"></h2>
                                     </div>
                                 </div>
 
